extensions/wikia/EditPageLayout/css/core/rail.scss
#EditPageRail {
	float: right;
	position: relative;
	width: $width-rail - 10;
}

