BugId: 5651 Editor reskin: right rail scrollbar for low resolutions
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@37328 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageLayout/css/core/rail.scss
+++ b/extensions/wikia/EditPageLayout/css/core/rail.scss
@@ -2,4 +2,14 @@
 	float: right;
 	position: relative;
 	width: $width-rail - 10;
+	
+	.rail-auto-height {
+		margin-left: -14px;
+		padding-left: 14px;
+		overflow-x: hidden;
+		
+		> * {
+			width: $width-rail;
+		}
+	}
 }
